--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LUCE Lookbook Platform</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!-- CSS 파일을 불러옵니다. -->
-  <link rel="stylesheet" href="styles/style.css">
-</head>
+<html lang="ko"> <head>
+  </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="/">
-        <!-- 로고 경로는 assets/luce-logo.svg로 가정합니다. -->
         <img src="assets/luce-logo.svg" alt="LUCE" onerror="this.style.display='none'" />
         <span class="logo__text">LUCE LOOKBOOK</span>
       </a>
       <nav class="main-nav">
-        <a href="#lookbook" data-view-target="lookbook">룩북</a>
-        <a href="#selection" data-view-target="selection">셀렉션</a>
-        <a href="#studio" data-view-target="studio">스튜디오 셀렉션</a>
-        <a href="#checklist" data-view-target="checklist">체크리스트</a>
-        <a href="admin.html">어드민</a>
+        <a href="#lookbook" data-view-target="lookbook" data-i18n-key="nav_lookbook">룩북</a>
+        <a href="#selection" data-view-target="selection" data-i18n-key="nav_selection">셀렉션</a>
+        <a href="#studio" data-view-target="studio" data-i18n-key="nav_studio">스튜디오 셀렉션</a>
+        <a href="#checklist" data-view-target="checklist" data-i18n-key="nav_checklist">체크리스트</a>
+        <a href="admin.html" data-i18n-key="nav_admin">어드민</a>
       </nav>
-      <a class="btn ghost" href="signup.html">회원가입</a>
+      
+      <div class="header-actions">
+        <div class="lang-switcher">
+          <button data-lang="ko" class="active" aria-label="한국어">KR</button>
+          <button data-lang="en" aria-label="English">EN</button>
+          <button data-lang="zh" aria-label="中文">CN</button>
+        </div>
+        <a class="btn ghost" href="signup.html" data-i18n-key="signup">회원가입</a>
+      </div>
     </div>
   </header>
 
@@ -35,184 +33,34 @@
         <div class="lookbook-top">
           <div class="lookbook-title">
             <p class="tag">LOOKBOOK</p>
-            <h1>라이브 준비를 위한 셀렉션</h1>
+            <h1 data-i18n-key="lookbook_title">라이브 준비를 위한 셀렉션</h1>
           </div>
           <div class="filter-group" role="group" aria-label="카테고리 필터">
-            <button class="filter-btn active" data-filter="all">전체</button>
-            <button class="filter-btn" data-filter="fashion">패션</button>
-            <button class="filter-btn" data-filter="beauty">뷰티</button>
-            <button class="filter-btn" data-filter="wellness">건기식</button>
-            <button class="filter-btn" data-filter="goods">잡화</button>
-          </div>
+            <button class="filter-btn active" data-filter="all" data-i18n-key="filter_all">전체</button>
+            <button class="filter-btn" data-filter="fashion" data-i18n-key="filter_fashion">패션</button>
+            </div>
         </div>
 
         <div class="lookbook-metrics" id="lookbook-metrics" aria-live="polite">
           <article class="metric-card metric-card--primary">
-            <p class="metric-label">등록된 룩</p>
+            <p class="metric-label" data-i18n-key="metric_products">등록된 룩</p>
             <p class="metric-value" id="metric-products">0</p>
-            <p class="metric-caption">최근 업데이트 <span id="metric-updated">-</span></p>
+            <p class="metric-caption">
+              <span data-i18n-key="metric_updated">최근 업데이트</span> <span id="metric-updated">-</span>
+            </p>
           </article>
-          <article class="metric-card">
-            <p class="metric-label">공급업체</p>
-            <p class="metric-value" id="metric-suppliers">0</p>
-            <p class="metric-caption">라이브 준비 완료</p>
-          </article>
-          <article class="metric-card">
-            <p class="metric-label">셀러 풀</p>
-            <p class="metric-value" id="metric-sellers">0</p>
-            <p class="metric-caption">셀렉션 대기</p>
-          </article>
-          <article class="metric-card">
-            <p class="metric-label">일반회원</p>
-            <p class="metric-value" id="metric-members">0</p>
-            <p class="metric-caption">소식 구독</p>
-          </article>
-          <p class="metric-error" id="metric-error" role="status" aria-live="polite" hidden>지표를 불러오지 못했습니다.</p>
-        </div>
-
-        <!-- app.js가 이 곳에 룩북 아이템을 채워넣습니다. -->
-        <div class="lookbook-grid" id="lookbook-grid" aria-live="polite"></div>
-        <div class="lookbook-loader" id="lookbook-loader" aria-hidden="true">다음 룩을 불러오는 중...</div>
-        <div id="lookbook-sentinel" class="lookbook-sentinel" aria-hidden="true"></div>
-      </div>
-    </section>
-
-    <!-- 이하 섹션들은 HTML 원본과 동일합니다. -->
-    <div id="look-modal" class="look-modal" aria-hidden="true">
-      <div class="look-modal__backdrop" data-modal-close></div>
-      <div class="look-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="look-modal-title" tabindex="-1">
-        <button type="button" class="look-modal__close" data-modal-close aria-label="닫기"><span aria-hidden="true">×</span></button>
-        <div class="look-modal__media" id="look-modal-media"></div>
-        <div class="look-modal__body" id="look-modal-body"></div>
-      </div>
-    </div>
-
-    <section id="selection" class="selection" data-view-section="selection" aria-hidden="true">
-      <div class="container">
-        <header class="section-header">
-          <div>
-            <p class="tag">SELECTION</p>
-            <h2>셀렉션 바구니</h2>
-            <p class="section-subtitle">스튜디오 요청 전까지 원하는 룩을 모아두세요. 카테고리별 필수 정보가 자동으로 매핑됩니다.</p>
           </div>
-          <button class="btn tertiary" id="export-looksheet">룩시트 10초 생성</button>
-        </header>
-
-        <div class="selection-content">
-          <ul class="selection-list" id="selection-list" aria-live="assertive"></ul>
-          <div class="selection-summary" id="selection-summary">
-            <h3>요약</h3>
-            <p>현재 담은 룩이 없습니다.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="studio" class="studio" aria-labelledby="studio-title" data-view-section="studio" aria-hidden="true">
-      <div class="container">
-        <header class="section-header">
-          <div>
-            <p class="tag">STUDIO CHECKOUT</p>
-            <h2 id="studio-title">스튜디오 셀렉션 체크아웃</h2>
-            <p class="section-subtitle">셀렉션 담기 → 스튜디오 예약까지 한 번에 완료하세요. 요청 → 승인 → 준비중 → 완료가 실시간으로 공유됩니다.</p>
-          </div>
-        </header>
-
         <form id="studio-request" class="studio-form">
           <div class="form-group">
-            <label for="studio-seller">셀러 명</label>
-            <input id="studio-seller" name="studio-seller" type="text" placeholder="셀러 브랜드명을 입력하세요" required>
+            <label for="studio-seller" data-i18n-key="studio_seller_label">셀러 명</label>
+            <input id="studio-seller" name="studio-seller" type="text" 
+                   placeholder="셀러 브랜드명을 입력하세요" 
+                   data-i18n-key="studio_seller_placeholder" required>
           </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label for="studio-date">요청 날짜</label>
-              <input id="studio-date" name="studio-date" type="date" required>
-            </div>
-            <div class="form-group">
-              <label for="studio-channel">방송 채널</label>
-              <select id="studio-channel" name="studio-channel" required>
-                <option value="">채널 선택</option>
-                <option value="네이버 쇼핑라이브">네이버 쇼핑라이브</option>
-                <option value="카카오 쇼핑라이브">카카오 쇼핑라이브</option>
-                <option value="틱톡">틱톡 라이브</option>
-                <option value="자체몰">자체몰 라이브</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="studio-notes">요청 메모</label>
-            <textarea id="studio-notes" name="studio-notes" rows="4" placeholder="준비 요청 사항, 협의가 필요한 포인트를 적어주세요"></textarea>
-          </div>
-          <button class="btn primary" type="submit">요청 등록</button>
-          <p class="form-feedback" id="studio-feedback" role="status" aria-live="polite"></p>
-        </form>
-
+          </form>
       </div>
     </section>
-
-    <section id="checklist" class="checklist" data-view-section="checklist" aria-hidden="true">
-      <div class="container">
-        <header class="section-header">
-          <div>
-            <p class="tag">CHECKLIST</p>
-            <h2>방송 준비 체크리스트</h2>
-            <p class="section-subtitle">업로드 규칙, 검수, 세트 정리까지 문서 한 줄로 기록합니다.</p>
-          </div>
-        </header>
-
-        <div class="checklist-grid">
-          <article class="checklist-card">
-            <h3>공급업체 업로드 규칙</h3>
-            <ul>
-              <li>실측 4항목(어깨, 가슴, 총장, 소매) 필수 입력</li>
-              <li>혼용률과 세탁 주의 문구 표준화</li>
-              <li>사진 4장 이상 · 배경 흰색 유지</li>
-              <li>재고 수량·입고 가능일 업데이트</li>
-            </ul>
-          </article>
-          <article class="checklist-card">
-            <h3>스튜디오 준비</h3>
-            <ul>
-              <li>사이즈 샘플 실측 재확인</li>
-              <li>하자 체크 및 보수 여부 메모</li>
-              <li>세트별 라벨링 및 스티밍 완료</li>
-              <li>룩시트 출력 · 진행자 공유</li>
-            </ul>
-          </article>
-          <article class="checklist-card">
-            <h3>교환·반품 기준</h3>
-            <ul>
-              <li>착용 흔적·세탁 흔적이 있을 경우 제외</li>
-              <li>원단 불량·배송 오배송 즉시 교환 진행</li>
-              <li>라이브 중 공지한 조건 그대로 적용</li>
-              <li>문서 기록 48시간 내 공유</li>
-            </ul>
-          </article>
-        </div>
-      </div>
-    </section>
-
   </main>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div>
-        <div class="logo">
-          <img src="assets/luce-logo.svg" alt="LUCE" onerror="this.style.display='none'" />
-          <span class="logo__text">LUCE LOOKBOOK</span>
-        </div>
-        <p>동대문 라이브커머스를 위한 준비 도구. 고른다 → 준비한다 → 방송한다.</p>
-      </div>
-      <div class="footer-meta">
-        <p>문의: luce@lookbook.app · 02-000-0000</p>
-        <p>© 2025 LUCE Commerce Studio. All rights reserved.</p>
-      </div>
-    </div>
-  </footer>
-
-  <!-- 스크립트 파일들을 불러옵니다. -->
-  <script src="scripts/demo-data.js" defer></script>
-  <script src="scripts/app.js" defer></script>
-</body>
+  
+  </body>
 </html>
-
