--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     [가장 중요] CSS 파일 경로입니다.
     만약 style.css가 'styles' 폴더 안이 아니라면 href="style.css"로 수정하세요.
   -->
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/style.css?v=1.0.1">
 </head>
 <body>
   <header class="site-header">
