--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- 
-    [가장 중요] CSS 파일 경로입니다.
-    만약 style.css가 'styles' 폴더 안이 아니라면 href="style.css"로 수정하세요.
+    [‼️‼️‼️ 가장 중요한 수정 ‼️‼️‼️]
+    CSS 파일 링크 뒤에 '?v=1.0.1'을 추가하여 브라우저 캐시를 강제로 무력화합니다.
   -->
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/style.css?v=1.0.1">
+
 </head>
 <body>
   <header class="site-header">
@@ -50,7 +51,7 @@
         <div class="lookbook-top">
           <div class="lookbook-title">
             <p class="tag">LOOKBOOK</p>
-            <h1 data-i18n-key="lookbook_title">라이브 준비를 위한 셀렉션</h1>
+            <h1 data-i18n-key="lookbook_title">라이브 준비을 위한 셀렉션</h1>
           </div>
           <div class="filter-group" role="group" aria-label="카테고리 필터">
             <button class="filter-btn active" data-filter="all" data-i18n-key="filter_all">전체</button>
