--- a/signup.html
+++ b/signup.html
@@ -29,13 +29,13 @@
       </header>
 
       <div class="signup-steps" role="tablist" aria-label="회원가입 단계">
-        <button type="button" class="signup-step is-active" data-step="1" aria-selected="true">1. 회원 유형 선택</button>
-        <button type="button" class="signup-step" data-step="2" aria-selected="false" disabled>2. 정보 입력</button>
-        <button type="button" class="signup-step" data-step="3" aria-selected="false" disabled>3. 완료</button>
+        <button type="button" class="signup-step is-active" id="step-1-tab" data-step="1" aria-selected="true" aria-controls="step-panel-1">1. 회원 유형 선택</button>
+        <button type="button" class="signup-step" id="step-2-tab" data-step="2" aria-selected="false" aria-controls="step-panel-2" disabled>2. 정보 입력</button>
+        <button type="button" class="signup-step" id="step-3-tab" data-step="3" aria-selected="false" aria-controls="step-panel-3" disabled>3. 완료</button>
       </div>
 
       <form id="signup-form" novalidate>
-        <section class="signup-panel" data-step-panel="1" role="tabpanel" aria-labelledby="step-1">
+        <section class="signup-panel" id="step-panel-1" data-step-panel="1" role="tabpanel" aria-labelledby="step-1-tab" aria-hidden="false">
           <h2 class="signup-panel__title">어떤 유형으로 가입하시나요?</h2>
           <p class="signup-panel__description">가입 후에도 프로필에서 회원 유형을 변경할 수 있습니다.</p>
 
@@ -65,7 +65,7 @@
           </div>
         </section>
 
-        <section class="signup-panel" data-step-panel="2" role="tabpanel" hidden>
+        <section class="signup-panel" id="step-panel-2" data-step-panel="2" role="tabpanel" aria-labelledby="step-2-tab" aria-hidden="true" hidden>
           <h2 class="signup-panel__title">기본 정보를 입력해주세요</h2>
           <p class="signup-panel__description" id="selected-type-help">선택한 회원 유형에 맞춰 필수 항목이 달라집니다.</p>
 
@@ -98,7 +98,7 @@
             </div>
             <div class="form-group" data-extra="business">
               <label for="business_registration_number">사업자등록번호<span aria-hidden="true" class="required">*</span></label>
-              <input type="text" id="business_registration_number" name="business_registration_number" placeholder="000-00-00000">
+              <input type="text" id="business_registration_number" name="business_registration_number" placeholder="000-00-00000" inputmode="numeric">
             </div>
             <div class="form-group" data-extra="channels">
               <label for="main_platforms">주요 판매 플랫폼</label>
@@ -138,7 +138,7 @@
           </div>
         </section>
 
-        <section class="signup-panel" data-step-panel="3" role="tabpanel" hidden>
+        <section class="signup-panel" id="step-panel-3" data-step-panel="3" role="tabpanel" aria-labelledby="step-3-tab" aria-hidden="true" hidden>
           <div class="signup-complete">
             <h2>가입 신청이 완료되었습니다.</h2>
             <p>입력하신 이메일 주소로 인증 메일을 전송했습니다. 메일 확인 후 로그인해주세요.</p>
