Fix seller platform payload and update signup messaging (#6)

--- a/signupSuccess.html
+++ b/signupSuccess.html
@@ -34,7 +34,7 @@
       <header class="signup-card__header">
         <p class="tag" data-i18n-key="signup_tag">SIGN UP</p>
         <h1 id="signup-success-title" data-i18n-key="signup_complete_title">가입 신청이 완료되었습니다.</h1>
-        <p class="signup-card__subtitle" data-i18n-key="signup_complete_message">입력하신 이메일 주소로 인증 메일을 전송했습니다. 메일 확인 후 로그인해주세요.</p>
+        <p class="signup-card__subtitle" data-i18n-key="signup_complete_message">LUCE LOOKBOOK 가입이 완료되었습니다. 곧 담당자가 안내를 드릴 예정입니다.</p>
       </header>
 
       <div class="signup-complete__preview" id="signup-preview" aria-live="polite">
