Fix profile metrics counts and update footer contact info

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
         <p data-i18n-key="footer_subtitle">동대문 라이브커머스를 위한 준비 도구. 고른다 → 준비한다 → 방송한다.</p>
       </div>
       <div class="footer-meta">
-        <p data-i18n-key="footer_contact">문의: luce@lookbook.app · 02-000-0000</p>
-        <p data-i18n-key="footer_copyright">© 2025 LUCE Commerce Studio. All rights reserved.</p>
+        <p data-i18n-key="footer_contact">문의: admin@luce.app · 010-9417-7871</p>
+        <p data-i18n-key="footer_copyright">© 2025 DSY International. All rights reserved.</p>
       </div>
     </div>
   </footer>
