--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
           <article class="metric-card">
             <p class="metric-label" data-i18n-key="metric_suppliers">공급업체</p>
             <p class="metric-value" id="metric-suppliers">0</p>
-            <p class="metric-caption" data-i18n-key="metric_suppliers_caption">라이브 준비 완료</p>
+            <p class="metric-caption" data-i18n-key="metric_suppliers_caption">제품 공급 중</p>
           </article>
           <article class="metric-card">
             <p class="metric-label" data-i18n-key="metric_sellers">셀러 풀</p>
             <p class="metric-value" id="metric-sellers">0</p>
-            <p class="metric-caption" data-i18n-key="metric_sellers_caption">셀렉션 대기</p>
+            <p class="metric-caption" data-i18n-key="metric_sellers_caption">셀렉션 대기 중</p>
           </article>
           <article class="metric-card">
             <p class="metric-label" data-i18n-key="metric_members">일반회원</p>
             <p class="metric-value" id="metric-members">0</p>
-            <p class="metric-caption" data-i18n-key="metric_members_caption">소식 구독</p>
+            <p class="metric-caption" data-i18n-key="metric_members_caption">소식 구독 중</p>
           </article>
           <p class="metric-error" id="metric-error" role="status" aria-live="polite" hidden data-i18n-key="metric_error">지표를 불러오지 못했습니다.</p>
         </div>
