Remove phone number from footer contact info

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <p data-i18n-key="footer_subtitle">동대문 라이브커머스를 위한 준비 도구. 고른다 → 준비한다 → 방송한다.</p>
       </div>
       <div class="footer-meta">
-        <p data-i18n-key="footer_contact">문의: admin@luce.app · 010-9417-7871</p>
+        <p data-i18n-key="footer_contact">문의: admin@luce.app</p>
         <p data-i18n-key="footer_copyright">© 2025 DSY International. All rights reserved.</p>
       </div>
     </div>
