--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
           <article class="metric-card">
             <p class="metric-label" data-i18n-key="metric_suppliers">공급업체</p>
             <p class="metric-value" id="metric-suppliers">0</p>
-            <p class="metric-caption" data-i18n-key="metric_suppliers_caption">라이브 준비 완료</p>
+            <p class="metric-caption" data-i18n-key="metric_suppliers_caption">제품 공급 중</p>
           </article>
           <article class="metric-card">
             <p class="metric-label" data-i18n-key="metric_sellers">셀러 풀</p>
             <p class="metric-value" id="metric-sellers">0</p>
-            <p class="metric-caption" data-i18n-key="metric_sellers_caption">셀렉션 대기</p>
+            <p class="metric-caption" data-i18n-key="metric_sellers_caption">셀렉션 대기 중</p>
           </article>
           <article class="metric-card">
             <p class="metric-label" data-i18n-key="metric_members">일반회원</p>
             <p class="metric-value" id="metric-members">0</p>
-            <p class="metric-caption" data-i18n-key="metric_members_caption">소식 구독</p>
+            <p class="metric-caption" data-i18n-key="metric_members_caption">소식 구독 중</p>
           </article>
           <p class="metric-error" id="metric-error" role="status" aria-live="polite" hidden data-i18n-key="metric_error">지표를 불러오지 못했습니다.</p>
         </div>
@@ -229,7 +229,7 @@
         <p data-i18n-key="footer_subtitle">동대문 라이브커머스를 위한 준비 도구. 고른다 → 준비한다 → 방송한다.</p>
       </div>
       <div class="footer-meta">
-        <p data-i18n-key="footer_contact">문의: admin@luce.app · 010-9417-7871</p>
+        <p data-i18n-key="footer_contact">문의: admin@luce.app</p>
         <p data-i18n-key="footer_copyright">© 2025 DSY International. All rights reserved.</p>
       </div>
     </div>
