--- a/index.html
+++ b/index.html
@@ -243,6 +243,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="scripts/supabaseClient.js" defer></script>
   <script src="scripts/i18n.js" defer></script>
-  <script src="scripts/app.js" defer></script>
+  <script type="module" src="scripts/app.js"></script>
 </body>
 </html>
