--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   -->
   <script src="scripts/demo-data.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="scripts/supabaseClient.js" defer></script>
+  <script type="module" src="scripts/supabaseClient.js"></script>
   <script src="scripts/i18n.js" defer></script>
   <script type="module" src="scripts/app.js"></script>
 </body>
