Refine signup flow and add featured video

--- a/index.html
+++ b/index.html
@@ -39,12 +39,29 @@
           <span>/</span>
           <button data-lang="zh">中文</button>
         </nav>
-        <a class="btn ghost" href="signup.html" data-i18n-key="signup">회원가입</a>
+        <a class="btn ghost" href="signupUserTypeSelect.html" data-i18n-key="signup">회원가입</a>
       </div>
     </div>
   </header>
 
   <main>
+    <section class="hero-media" aria-labelledby="hero-media-title">
+      <div class="container hero-media__inner">
+        <div class="hero-media__text">
+          <p class="tag">LOOKBOOK FEATURE</p>
+          <h1 id="hero-media-title">블루 체크 코트 LP0033</h1>
+          <p class="hero-media__price">가격 48,000원</p>
+          <p class="hero-media__description">룩북에 새로 추가된 블루 체크 코트 LP0033 영상을 확인해 보세요.</p>
+        </div>
+        <div class="hero-media__player">
+          <video controls playsinline muted loop poster="" aria-label="블루 체크 코트 LP0033 영상">
+            <source src="assets/LP0033.mp4" type="video/mp4">
+            현재 브라우저에서는 동영상을 재생할 수 없습니다.
+          </video>
+        </div>
+      </div>
+    </section>
+
     <!-- 1. 룩북 섹션 -->
     <section id="lookbook" class="lookbook spotlight" data-view-section="lookbook">
       <div class="container">
@@ -223,7 +240,7 @@
     <div class="container footer-inner">
       <div>
         <div class="logo">
-          <img src="assets/luce-logo.svg" alt="LUCE" onerror="this.style.display='none'" />
+          <img src="assets/luce_logo_main.png" alt="LUCE" />
           <span class="logo__text">LUCE LOOKBOOK</span>
         </div>
         <p data-i18n-key="footer_subtitle">동대문 라이브커머스를 위한 준비 도구. 고른다 → 준비한다 → 방송한다.</p>
