Update hero messaging and stabilize signup flow

--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
       <div class="container hero-media__inner">
         <div class="hero-media__text">
           <p class="tag">LOOKBOOK FEATURE</p>
-          <h1 id="hero-media-title">블루 체크 코트 LP0033</h1>
-          <p class="hero-media__price">가격 48,000원</p>
-          <p class="hero-media__description">룩북에 새로 추가된 블루 체크 코트 LP0033 영상을 확인해 보세요.</p>
+          <h1 id="hero-media-title">apM 회원가입 매장 판매제품 업댓 AI구동</h1>
+          <p class="hero-media__description">apM 회원가입과 매장·판매제품 업데이트를 AI로 자동화한 신규 경험을 만나보세요.</p>
         </div>
         <div class="hero-media__player">
-          <video controls playsinline muted loop poster="" aria-label="블루 체크 코트 LP0033 영상">
+          <video controls playsinline muted loop poster="" aria-label="apM 회원가입 및 판매제품 업데이트 소개 영상">
             <source src="assets/LP0033.mp4" type="video/mp4">
             현재 브라우저에서는 동영상을 재생할 수 없습니다.
           </video>
