--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container hero-media__inner">
         <div class="hero-media__text">
           <p class="tag">LOOKBOOK FEATURE</p>
-          <h1 id="hero-media-title">apM 회원가입 매장 판매제품 업댓 AI구동</h1>
+          <h1 id="hero-media-title">APM x LUCE 회원가입 공급업체 판매제품 AI 모델 업데이트 (AI로 생성된 영상)</h1>
           <p class="hero-media__description">apM 회원가입과 매장·판매제품 업데이트를 AI로 자동화한 신규 경험을 만나보세요.</p>
         </div>
         <div class="hero-media__player">
