--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <section class="hero-media" aria-labelledby="hero-media-title">
       <div class="container hero-media__inner">
         <div class="hero-media__text">
-          <p class="tag">LOOKBOOK FEATURE</p>
-          <h1 id="hero-media-title">'APM x LUCE' 가입 공급업체 대상 판매제품 AI 모델 자동화 업데이트</h1>
-          <p class="hero-media__description">apM 회원가입과 매장·판매제품 업데이트를 AI로 자동화한 신규 경험을 만나보세요.</p>
+          <p class="tag" data-i18n-key="hero_feature_tag">LOOKBOOK FEATURE</p>
+          <h1 id="hero-media-title" data-i18n-key="hero_feature_title">'APM x LUCE' 가입 공급업체 대상 판매제품 AI 모델 자동화 업데이트</h1>
+          <p class="hero-media__description" data-i18n-key="hero_feature_description">apM 회원가입과 매장·판매제품 업데이트를 AI로 자동화한 신규 경험을 만나보세요.</p>
         </div>
         <div class="hero-media__player">
           <video controls playsinline muted loop poster="" aria-label="apM 회원가입 및 판매제품 업데이트 소개 영상">
             <source src="assets/LP0033.mp4" type="video/mp4">
-            현재 브라우저에서는 동영상을 재생할 수 없습니다.
+            <span data-i18n-key="hero_video_fallback">현재 브라우저에서는 동영상을 재생할 수 없습니다.</span>
           </video>
         </div>
       </div>
