--- a/signupUserTypeSelect.html
+++ b/signupUserTypeSelect.html
@@ -43,7 +43,7 @@
           <span class="member-type-card__title" data-i18n-key="signup_type_supplier_title">상품을 공급하고 싶은 파트너</span>
           <span class="member-type-card__description" data-i18n-key="signup_type_supplier_desc">사업자등록증과 주요 판매 채널 정보를 등록해 주세요.</span>
           <div class="member-type-card__actions">
-            <button class="btn primary" type="button">공급업체로 가입</button>
+            <button class="btn primary" type="button" data-i18n-key="signup_type_supplier_cta">공급업체로 가입</button>
           </div>
         </article>
 
@@ -52,7 +52,7 @@
           <span class="member-type-card__title" data-i18n-key="signup_type_seller_title">라이브 커머스를 진행하는 셀러</span>
           <span class="member-type-card__description" data-i18n-key="signup_type_seller_desc">연락 가능한 정보를 입력하고, 운영 중인 채널을 알려주세요.</span>
           <div class="member-type-card__actions">
-            <button class="btn primary" type="button">셀러로 가입</button>
+            <button class="btn primary" type="button" data-i18n-key="signup_type_seller_cta">셀러로 가입</button>
           </div>
         </article>
 
@@ -61,12 +61,12 @@
           <span class="member-type-card__title" data-i18n-key="signup_type_member_title">룩북 소식을 받아보고 싶은 회원</span>
           <span class="member-type-card__description" data-i18n-key="signup_type_member_desc">기본 연락처만 입력하면 가입할 수 있습니다.</span>
           <div class="member-type-card__actions">
-            <button class="btn primary" type="button">일반회원으로 가입</button>
+            <button class="btn primary" type="button" data-i18n-key="signup_type_member_cta">일반회원으로 가입</button>
           </div>
         </article>
       </div>
 
-      <p class="signup-feedback" id="select-feedback" role="status" aria-live="polite"></p>
+      <p class="signup-feedback" id="select-feedback" role="status" aria-live="polite" data-i18n-key="signup_type_feedback">가입 유형을 선택하면 다음 단계로 이동합니다.</p>
     </section>
   </main>
 
@@ -78,7 +78,6 @@
       }
 
       const cards = document.querySelectorAll('[data-user-type]');
-      const feedback = document.getElementById('select-feedback');
 
       function navigateToSignup(type) {
         if (!type) return;
@@ -108,10 +107,6 @@
           });
         }
       });
-
-      if (feedback) {
-        feedback.textContent = '가입 유형을 선택하면 다음 단계로 이동합니다.';
-      }
     });
   </script>
 </body>
