--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container hero-media__inner">
         <div class="hero-media__text">
           <p class="tag" data-i18n-key="hero_feature_tag">LOOKBOOK FEATURE</p>
-          <h1 id="hero-media-title" data-i18n-key="hero_feature_title">B2B Seller 전문 App "LUCE"<br>회원가입 Best 3 도매상인 중 apM 도매상인 대상 판매제품 AI모델 자동화 업데이트</h1>
+          <h1 id="hero-media-title" data-i18n-key="hero_feature_title">B2B Seller 전문 App "LUCE" 회원가입 Best 3 도매상인 중 apM 도매상인 대상 판매제품 AI모델 자동화 업데이트</h1>
           <p class="hero-media__description" data-i18n-key="hero_feature_description">동대문 도매상인분들의 "LUCE" 회원가입 과 판매제품 업데이트를 자동화 한 신규 경험을 만나보세요.</p>
         </div>
         <div class="hero-media__player">
