Enable autoplay for mobile videos

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p class="hero-media__description" data-i18n-key="hero_feature_description">동대문 도매상인분들의 "LUCE" 회원가입 과 판매제품 업데이트를 자동화 한 신규 경험을 만나보세요.</p>
         </div>
         <div class="hero-media__player">
-          <video controls playsinline muted loop poster="" aria-label="apM 회원가입 및 판매제품 업데이트 소개 영상">
+          <video controls autoplay playsinline muted loop poster="" aria-label="apM 회원가입 및 판매제품 업데이트 소개 영상">
             <source src="assets/LP0033.mp4" type="video/mp4">
             <span data-i18n-key="hero_video_fallback">현재 브라우저에서는 동영상을 재생할 수 없습니다.</span>
           </video>
