feat: Add rankings to main page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
             도매상인 대상 판매제품 AI모델 자동화 업데이트</h1>
           <p class="hero-media__description" data-i18n-key="hero_feature_description">동대문 도매상인분들의 "LUCE" 회원가입 과 판매제품
             업데이트를 자동화 한 신규 경험을 만나보세요.</p>
+
+          <!-- Ranking Section -->
+          <div class="hero-rankings" id="hero-rankings" aria-live="polite">
+            <div class="ranking-group">
+              <h3 class="ranking-title" data-i18n-key="ranking_supplier_title">Supplier Ranking</h3>
+              <ol class="ranking-list" id="ranking-supplier-list">
+                <!-- Items will be injected by JS -->
+                <li class="ranking-item skeleton"></li>
+                <li class="ranking-item skeleton"></li>
+                <li class="ranking-item skeleton"></li>
+              </ol>
+            </div>
+            <div class="ranking-group">
+              <h3 class="ranking-title" data-i18n-key="ranking_seller_title">Seller Ranking</h3>
+              <ol class="ranking-list" id="ranking-seller-list">
+                <!-- Items will be injected by JS -->
+                <li class="ranking-item skeleton"></li>
+                <li class="ranking-item skeleton"></li>
+                <li class="ranking-item skeleton"></li>
+              </ol>
+            </div>
+          </div>
         </div>
         <div class="hero-media__player">
           <!-- 비디오 preload=none 또는 metadata 권장, poster 설정, playsinline 유지 -->
